@@ -77,10 +77,10 @@ class BibTeXDocumentCache(object):
 			# parse
 			self.__document = self.__parser.parse(open(self.__file.path, "r").read(), self.__file, self.__issue_handler)
 	
-	def __new__(type):
-		if not '_instance' in type.__dict__:
-			type._instance = object.__new__(type)
-		return type._instance
+	def __new__(cls):
+		if not '_instance' in cls.__dict__:
+			cls._instance = object.__new__(cls)
+		return cls._instance
 	
 	def __init__(self):
 		if not '_ready' in dir(self):
